--- a/mainsite/templates/mainsite/index.html
+++ b/mainsite/templates/mainsite/index.html
@@ -24,6 +24,9 @@ style="background-image: url('{% static 'assets/img/home-bg.jpg' %}')"
             {% include "mainsite/post_list.html" %}
 
             <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
+
+            {% include "mainsite/form_contact.html" %}
+
         </div>
     </div>
 </div>
