--- a/mainsite/templates/mainsite/index.html
+++ b/mainsite/templates/mainsite/index.html
@@ -27,6 +27,19 @@ style="background-image: url('{% static 'assets/img/home-bg.jpg' %}')"
 
             {% include "mainsite/form_contact.html" %}
 
+<!--            <form method="post">-->
+<!--                {% csrf_token %}-->
+<!--                <label>-->
+<!--                    <input name="contact_form_2" value="email_form" hidden>-->
+<!--                </label>-->
+<!--                {{my_form.email}}-->
+<!--                <label>-->
+<!--                    <input name="contact_form_2" value="phone_form" hidden>-->
+<!--                </label>-->
+<!--                {{my_form.phone}}-->
+<!--                <button type="submit">ОТПРАВИТЬ</button>-->
+<!--            </form>-->
+
         </div>
     </div>
 </div>
