--- a/mainsite/templates/registration/profile.html
+++ b/mainsite/templates/registration/profile.html
@@ -11,7 +11,7 @@
     <div class="row px-xl-5">
         <div class="col-12">
             <nav class="breadcrumb bg-light mb-30">
-                <a class="breadcrumb-item text-dark" href="{% url 'mainsite_products' %}">ВЕРНУТЬСЯ НА ГЛАВНУЮ СТРАНИЦУ</a>
+                <a class="breadcrumb-item text-dark" href="{% url 'mainsite_products' %}">Вернуться на главную страницу</a>
                 <span class="breadcrumb-item active">Личный кабинет </span>
             </nav>
         </div>
