--- a/mainsite/templates/registration/base_registration.html
+++ b/mainsite/templates/registration/base_registration.html
@@ -35,9 +35,12 @@
             <div class="col-lg-6 text-center text-lg-right">
                 <div class="d-inline-flex align-items-center">
                     <a class="text-body mr-3" href="{% url 'profile' %}">Личный кабинет</a>
+                    {% if not user.is_authenticated %}
                     <a class="text-body mr-3" href="{% url 'signin' %}">Вход</a>
                     <a class="text-body mr-3" href="{% url 'signup' %}">Регистрация</a>
+                    {% else %}
                     <a class="text-body mr-3" href="{% url 'logaut' %}">Выход</a>
+                    {% endif %}
                 </div>
                 <div class="d-inline-flex align-items-center d-block d-lg-none">
                     <a href="" class="btn px-0 ml-2">
