--- a/mainsite/templates/registration/signup_new.html
+++ b/mainsite/templates/registration/signup_new.html
@@ -11,8 +11,8 @@
     <div class="row px-xl-5">
         <div class="col-12">
             <nav class="breadcrumb bg-light mb-30">
-                <a class="breadcrumb-item text-dark" href="{% url 'mainsite_products' %}">Главная</a>
-                <span class="breadcrumb-item active">Регистарция</span>
+                <a class="breadcrumb-item text-dark" href="{% url 'mainsite_products' %}">Вернуться на главную страницу</a>
+                <span class="breadcrumb-item active">Регистрация</span>
             </nav>
         </div>
     </div>
@@ -22,59 +22,41 @@
 
 <!-- Contact Start -->
 <div class="container-fluid">
-    <h4 class="section-title position-relative text-uppercase mx-xl-5 mb-4"><span class="bg-secondary pr-3">Заполните форму и мы вам перезвоним как только это будет возможно.</span></h4>
+    <h4 class="section-title position-relative text-uppercase mx-xl-5 mb-4"><span class="bg-secondary pr-3">Страница регистрации</span></h4>
     <div class="row px-xl-5">
         <div class="col-lg-7 mb-5">
             <div class="contact-form bg-light p-30">
                 <div id="success"></div>
-                <form class="login100-form validate-form" method="post">
-					{% csrf_token %}
-					<div class="wrap-input100 validate-input m-b-26" data-validate="Username is required">
-						<span class="label-input100">Username</span>
-						{{ form.username }}
-						<span class="focus-input100"></span>
-					</div>
-
-					<div class="wrap-input100 validate-input m-b-18" data-validate="Email is required">
-						<span class="label-input100">Email</span>
-						{{ form.email }}
-						<span class="focus-input100"></span>
-					</div>
-
-					<div class="wrap-input100 validate-input m-b-18" data-validate="Password is required">
-						<span class="label-input100">Password</span>
-						{{ form.password1 }}
-						<span class="focus-input100"></span>
-					</div>
-
-					<div class="wrap-input100 validate-input m-b-18" data-validate="Password is required">
-						<span class="label-input100">Password</span>
-						{{ form.password2 }}
-						<span class="focus-input100"></span>
-					</div>
-
-					<div class="flex-sb-m w-full p-b-30">
-
-						<div>
-							<a href="{% url 'signin' %}" class="txt1">
-								Если вы уже зарегистрированы, то пройдите на страницу авторизации.
-							</a>
-						</div>
-					</div>
-
-					<div class="container-login100-form-btn">
-						<button class="login100-form-btn">
-							ЗАРЕГИСТРИРОВАТЬСЯ
-						</button>
-					</div>
-				</form>
+                <form name="sentMessage" form method="post" novalidate="novalidate">
+                    {% csrf_token %}
+                    <div class="control-group">
+                        {{ form.username }}
+                        <p class="help-block text-danger"></p>
+                    </div>
+                    <div class="control-group">
+                        {{ form.email }}
+                        <p class="help-block text-danger"></p>
+                    </div>
+                    <div class="control-group">
+                        {{ form.password1 }}
+                        <p class="help-block text-danger"></p>
+                    </div>
+                    <div class="control-group">
+                        {{ form.password2 }}
+                        <p class="help-block text-danger"></p>
+                    </div>
+                    <div>
+                        <br>
+                        <button class="btn btn-primary py-2 px-4" type="submit" id="sendMessageButton">Зарегистрироваться</button>
+                    </div>
+                </form>
             </div>
         </div>
         <div class="col-lg-5 mb-5">
-			information place
+            Для того чтобы получить доступ к личному кабинету, необходимо зарегистрироваться. После регистрации введите логин и пароль на странице "АВТОРИЗАЦИЯ".
+            <p></p>
+            <a class="breadcrumb-item text-dark" href="{% url 'signin' %}">Если вы уже зарегистрированы, то пройдите на страницу "АВТОРИЗАЦИЯ".</a>
         </div>
     </div>
 </div>
 {% endblock %}
-
-
