--- a/mainsite/templates/mainsite_new/product_card.html
+++ b/mainsite/templates/mainsite_new/product_card.html
@@ -11,14 +11,13 @@
                 {% endif %}
                 <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>
                 <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>
-                <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>
             </div>
         </div>
         <div class="text-center py-4">
-            <a class="h6 text-decoration-none text-truncate" href="">{{ product.title }}</a>
-            <div class="d-flex align-items-center justify-content-center mt-2">
-                <h5>{{ product.price }}</h5><h6 class="text-muted ml-2">рублей за шт.</h6>
-            </div>
+                <a class="h6 text-decoration-none text-truncate" href="{{ product.get_absolute_url }}">{{ product.title }}</a>
+                <div class="d-flex align-items-center justify-content-center mt-2">
+                    <h5>{{ product.price }}</h5><h6 class="text-muted ml-2">рублей за шт.</h6>
+                </div>
         </div>
     </div>
 </div>
