--- a/mainsite/templates/mainsite_new/base.html
+++ b/mainsite/templates/mainsite_new/base.html
@@ -65,7 +65,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-6 text-left">
-                <form action="{% url 'search' %}" method="get" name="q">
+                <form action="#" method="get">
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Поиск товара">
                         <div class="input-group-append">
@@ -104,7 +104,10 @@
                             <a href="{% url 'mainsite_catalog' %}" class="nav-item nav-link">Каталог</a>
                             <a href="{% url 'mainsite_contact' %}" class="nav-item nav-link">Контакты</a>
                             <a href="{% url 'mainsite_about' %}" class="nav-item nav-link">О нас</a>
+                            <a href="{% url 'mainsite_publications' %}" class="nav-item nav-link">Новости</a>
                         </div>
+
+
 
                         <div class="navbar-nav ml-auto py-0 d-none d-lg-block">
                             <a href="" class="btn px-0">
