--- a/mainsite/templates/mainsite_new/category_card.html
+++ b/mainsite/templates/mainsite_new/category_card.html
@@ -15,7 +15,7 @@
                     </div>
                     <div class="flex-fill pl-3">
                         <h6>{{ cat.name }}</h6>
-                        <small class="text-body">100 Products</small>
+                        <small class="text-body">Количество продуктов</small>
                     </div>
                 </div>
             </a>
