add new andpoints

--- a/mainsite/templates/mainsite_new/about.html
+++ b/mainsite/templates/mainsite_new/about.html
@@ -18,8 +18,13 @@
     </div>
 </div>
 <!-- Breadcrumb End -->
-
-{{ about }}
+<div class="row px-xl-5">
+    <div class="col">
+        <div class="bg-light p-30">
+            {{ about }}
+        </div>
+    </div>
+</div>
 
 {% endblock %}
 
