--- a/mainsite/templates/mainsite_new/product_main.html
+++ b/mainsite/templates/mainsite_new/product_main.html
@@ -94,7 +94,7 @@
                 <div class="tab-content">
                     <div class="tab-pane fade show active" id="tab-pane-1">
                         <h4 class="mb-3">Описание изделия</h4>
-                        {{ product.descr }}
+                        {{ product.descr|linebreaks }}
                     </div>
                     <div class="tab-pane fade" id="tab-pane-2">
                         <h4 class="mb-3">Additional Information</h4>
