--- a/registration/templates/registration/profile.html
+++ b/registration/templates/registration/profile.html
@@ -1,4 +1,5 @@
-{% extends "registration/base_registration.html" %}
+{% extends "mainsite_new/base.html" %}
+{% load static %}
 
 {% block title %}
 ЛИЧНЫЙ КАБИНЕТ
