--- a/mainsite/templates/mainsite_new/category_card.html
+++ b/mainsite/templates/mainsite_new/category_card.html
@@ -6,15 +6,15 @@
 <div class="container-fluid pt-5">
     <h2 class="section-title position-relative text-uppercase mx-xl-5 mb-4"><span class="bg-secondary pr-3">Категории товаров</span></h2>
     <div class="row px-xl-5 pb-3">
-        {% for cat in category %}
+        {% for category in category %}
         <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
             <a class="text-decoration-none" href="{% url 'mainsite_catalog' %}">
                 <div class="cat-item img-zoom d-flex align-items-center mb-4">
                     <div class="overflow-hidden" style="width: 100px; height: 100px;">
-                        <img class="img-fluid" src="{{ cat.image.url }}" alt="">
+                        <img class="img-fluid" src="{{ category.image.url }}" alt="">
                     </div>
                     <div class="flex-fill pl-3">
-                        <h6>{{ cat.name }}</h6>
+                        <h6>{{ category.name }}</h6>
                         <small class="text-body">Количество продуктов</small>
                     </div>
                 </div>
