--- a/mainsite/templates/mainsite_new/index.html
+++ b/mainsite/templates/mainsite_new/index.html
@@ -13,11 +13,7 @@
     <div class="row px-xl-5">
         <div class="col-lg-8">
             <div id="header-carousel" class="carousel slide carousel-fade mb-30 mb-lg-0" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#header-carousel" data-slide-to="0"></li>
-                    <li data-target="#header-carousel" data-slide-to="1" class="active"></li>
-                    <li data-target="#header-carousel" data-slide-to="2"></li>
-                </ol>
+
                 <div class="carousel-inner">
                     <div class="carousel-item position-relative active" style="height: 430px;">
                         <img class="position-absolute w-100 h-100" src="{% static 'img/carusel1.jpg' %}" style="object-fit: cover;">
@@ -25,7 +21,7 @@
                             <div class="p-3" style="max-width: 700px;">
                                 <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Изделия на складе и под заказ</h1>
                                 <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Изделия ручной работы. Сделано с душой.</p>
-                                <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Посетить каталог</a>
+                                <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="{% url 'mainsite_catalog' %}">Посетить каталог</a>
                             </div>
                         </div>
                     </div>
@@ -35,7 +31,7 @@
                             <div class="p-3" style="max-width: 700px;">
                                 <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Изделия на складе и под заказ</h1>
                                 <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Изделия ручной работы. Сделано с душой.</p>
-                                <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Посетить каталог</a>
+                                <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="{% url 'mainsite_catalog' %}">Посетить каталог</a>
                             </div>
                         </div>
                     </div>
@@ -45,7 +41,7 @@
                             <div class="p-3" style="max-width: 700px;">
                                 <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Изделия на складе и под заказ</h1>
                                 <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Изделия на складе и под заказ</p>
-                                <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Посетить каталог</a>
+                                <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="{% url 'mainsite_catalog' %}">Посетить каталог</a>
                             </div>
                         </div>
                     </div>
